# local_ai_assistant_jarvis

./: .env.example  .gitignore  README.md  README_PYPI.md  README_RELEASE.md  config.py  jarvis_cli.py  local.db  main.py  pip_output.txt  preflight.py  prod_config.py  pyproject.toml  requirements.txt  script.py  setup.py
audio/: device.py  output.py  resample.py  utils.py
models/: load_ollama_model.py  load_transcribtion_model.py  load_tts_model.py  load_wakeword_model.py
services/: autostart.py  bootstrap.py  get_gpt_res.py  local_db.py  manage_tools.py  model_downloads.py  play_responce.py  run_chat.py  transcribe.py  wake.py
setup/: __init__.py  download_models.py
tools/: __init__.py  end_chat.py  memory.py  weather.py
utils/: create_placeholder_sounds.py
