[project]
name = "local-ai-assistant-jarvis"
version = "1.0.0"
description = "Fully local ai assistant that can listen, think, talk and use coded tools. Still in dev state btw"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "chromadb",
    "click>=8.3.1",
    "coqui-tts",
    "faster-whisper",
    "numpy",
    "ollama",
    "openwakeword",
    "pyperclip",
    "python-dotenv",
    "requests",
    "scipy",
    "sounddevice"
]

[project.scripts]
jarvis = "script:cli"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["config", "main", "prod_config", "script"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["audio*", "models*", "services*", "tools*", "utils*"]
exclude = [".venv*", "setup*"]
namespaces = true

[tool.setuptools.package-data]
audio = [
    "pointing_sounds/*.wav",
    "reference_sounds/*.wav",
    "thinking_sounds/*.wav",
]
